tests/baselines/reference/overloadresolutionWithConstraintCheckingDeferred.errors.txt
overloadresolutionWithConstraintCheckingDeferred.ts(14,5): error TS2322: Type 'string' is not assignable to type 'number'.
overloadresolutionWithConstraintCheckingDeferred.ts(14,37): error TS2345: Argument of type 'C' is not assignable to parameter of type 'A'.
  Property 'x' is missing in type 'C' but required in type 'A'.
overloadresolutionWithConstraintCheckingDeferred.ts(16,5): error TS2322: Type 'string' is not assignable to type 'number'.
overloadresolutionWithConstraintCheckingDeferred.ts(16,38): error TS2344: Type 'C' does not satisfy the constraint 'A'.
  Property 'x' is missing in type 'C' but required in type 'A'.
overloadresolutionWithConstraintCheckingDeferred.ts(19,14): error TS2344: Type 'C' does not satisfy the constraint 'A'.


==== overloadresolutionWithConstraintCheckingDeferred.ts (5 errors) ====
    interface A { x }
    interface B { x; y }
    interface C { z }
    interface D { q }
    
    class G<T extends A> {
        constructor(x: T) { }
    }
    
    declare function foo(arg: (x: D) => number): string;
    declare function foo(arg: (x: C) => any): string;
    declare function foo(arg: (x: B) => any): number;
    
    var result: number = foo(x => new G(x)); // x has type D, new G(x) fails, so first overload is picked.
        ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
                                        ~
!!! error TS2345: Argument of type 'C' is not assignable to parameter of type 'A'.
!!! error TS2345:   Property 'x' is missing in type 'C' but required in type 'A'.
!!! related TS2728 overloadresolutionWithConstraintCheckingDeferred.ts:1:15: 'x' is declared here.
    
    var result2: number = foo(x => new G<typeof x>(x)); // x has type D, new G(x) fails, so first overload is picked.
        ~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
                                         ~~~~~~~~
!!! error TS2344: Type 'C' does not satisfy the constraint 'A'.
!!! error TS2344:   Property 'x' is missing in type 'C' but required in type 'A'.
!!! related TS2728 overloadresolutionWithConstraintCheckingDeferred.ts:1:15: 'x' is declared here.
    
    var result3: string = foo(x => { // x has type D
        var y: G<typeof x>; // error that D does not satisfy constraint, y is of type G<D>, entire call to foo is an error
                 ~~~~~~~~
!!! error TS2344: Type 'C' does not satisfy the constraint 'A'.
        return y;
    });
    